--- a/about_me/about_me.css
+++ b/about_me/about_me.css
@@ -1,9 +1,10 @@
-@font-face {
-    font-family: "Jua";
-    src: url("/Portfolio/Portfolio/about_me/BMJUA_ttf/\ /\(1/\).ttf");
-}
+.first_tab {
+    position: absolute;
+    background-color: #0ff;
+    
+    width: 100%;
+    height: 100px;
 
-.dream_presentation {
-    font-family: "Jua";
-
+    left: 0px;
+    top: 0px;
 }
