--- a/first_tab/first_tab.css
+++ b/first_tab/first_tab.css
@@ -7,7 +7,7 @@
 
     font-family: "Jua";
     position: absolute;
-    background-color: rgba(119, 167, 255, 0.794);
+    background-color: rgb(158, 192, 255);
     
     width: 100%;
     height: 100px;
@@ -17,5 +17,5 @@
 }
 
 .bonobono_image {
-    
+    background-image: url("https://o.remove.bg/downloads/69327b22-b688-4eb7-8850-0303f800e151/image-removebg-preview.png");
 }
