--- a/Home/Home.css
+++ b/Home/Home.css
@@ -5,7 +5,10 @@
     src: url('./images/Pretendard-Thin.woff') format('woff');
     font-weight: 100;
     font-display: swap;
-    
+}
+
+body {
+    background: #D9D9D9;
 }
 
 .photo_center {
@@ -15,24 +18,12 @@
     width: 280px;
     height: 280px;
 
-    left: 1780px;
-    top: 380px;
+    left: 90vw;
+    top: 35%;
     
 
     background: #ECECEC;
     border: 1px solid #000000;
-    border-radius: 360%;
-}
-
-.photo_small {
-    position: absolute;
-    width: 374px;
-    height: 374px;
-
-    left: 1735px;
-    top: 333px;
-
-    background-color: black;
     border-radius: 360%;
 }
 
@@ -43,8 +34,6 @@
     padding: 0px;
     margin: 0px;
     overflow: hidden;
-    background-color: #D9D9D9;
-
     width: 100%;
     height: 80px;
 
@@ -63,19 +52,6 @@
     left: 98px;
     top: 26px;
     color: black;
-}
-
-.background {
-    box-sizing: border-box;
-
-    position: absolute;
-    width: 1920px;
-    height: 1000px;
-    left: 0px;
-    top: 80px;
-
-    background: #D9D9D9;
-    border: 1px solid #000000;
 }
 
 .center_dot {
@@ -97,7 +73,7 @@
     position: absolute;
     width: 160px;
     height: 266px;
-    left: 1840px;
+    left: 92.3vw;
     top: 80px;
 
     background-color: white;
