--- a/remake/Homepage.css
+++ b/remake/Homepage.css
@@ -5,32 +5,10 @@
     font-display: swap;
 }
 
+* {
+    margin: 0;
+}
 body {
-    background: #D9D9D9;
+    background: #D9D9D9;    
 }
 
-#topMenu {
-    height: 30px;
-    width: 850px;
-}
-#topMenu ul li {
-    list-style: none;
-    color: white;
-    background-color: #2d2d2d;
-    float: left;
-    line-height: 30px;
-    vertical-align: middle;
-    text-align: center;
-}
-#topMenu .menuLink {
-    text-decoration: none;
-    color: white;
-    display: block;
-    width: 150px;
-    font-size: 12px;
-    font-weight: bold;
-}
-#topMenu .menuLink:hover {
-    color: red;
-    background-color: #4d4d4d;
-}
