--- a/signup/signup.css
+++ b/signup/signup.css
@@ -192,12 +192,6 @@ h6 span {
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
-.form-group input::-moz-placeholder {
-  color: #c4c3ca;
-  opacity: 0.7;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
 .form-group input:-moz-placeholder {
   color: #c4c3ca;
   opacity: 0.7;
@@ -215,17 +209,12 @@ h6 span {
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
-.form-group input:focus::-moz-placeholder {
-  opacity: 0;
-  -webkit-transition: all 200ms linear;
-  transition: all 200ms linear;
-}
 .form-group input:focus:-moz-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
 }
-.form-group input:focus::-webkit-input-placeholder {
+.form-group input:focus:-webkit-input-placeholder {
   opacity: 0;
   -webkit-transition: all 200ms linear;
   transition: all 200ms linear;
@@ -269,18 +258,4 @@ h6 span {
   background-color: #102770;
   color: #ffeba7;
   box-shadow: 0 8px 24px 0 rgba(16, 39, 112, 0.2);
-}
-
-.logo {
-  position: absolute;
-  top: 30px;
-  right: 30px;
-  display: block;
-  z-index: 100;
-  transition: all 250ms linear;
-}
-.logo img {
-  height: 26px;
-  width: auto;
-  display: block;
 }
