--- a/remake/Homepage.css
+++ b/remake/Homepage.css
@@ -1,14 +1,39 @@
-@font-face {
-    font-family: 'Pretendard';
-    src: url('./images/Pretendard-Thin.woff') format('woff');
-    font-weight: 100;
-    font-display: swap;
-}
-
 * {
-    margin: 0;
-}
-body {
-    background: #D9D9D9;    
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  outline: 0;
+  margin: 0;
+  padding: 0;
 }
 
+html, body {
+  height: 100vh;
+  width: 100vw;
+}
+
+.wheel {
+  width: 500px;
+  height: 500px;
+  background-color: #3498db;
+  border-radius: 50%;
+  position: relative;
+  overflow: hidden;
+}
+
+.box {
+  width: 80px;
+  height: 80px;
+  background-color: #e74c3c;
+  border: 2px solid #c0392b;
+  border-radius: 50%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+}
