--- a/Home/Home.css
+++ b/Home/Home.css
@@ -1,174 +1,54 @@
-
-
-@font-face {
-    font-family: 'Pretendard';
-    src: url('./images/Pretendard-Thin.woff') format('woff');
-    font-weight: 100;
-    font-display: swap;
+body,
+html {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(137, 207, 240, 0.85);
+}
+.header {
+  background-color: rgba(87, 197, 249, 0.9);
+  padding: 0;
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 10vh;
 }
 
-body {
-    background: #D9D9D9;
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - 60px); /* header 높이를 뺀 나머지 높이 */
 }
 
-.photo_center {
-    box-sizing: border-box;
+.circle-container {
+  left: 83.5vw;
 
-    position: absolute;
-    width: 280px;
-    height: 280px;
-
-    left: 90vw;
-    top: 35%;
-    
-
-    background: #ECECEC;
-    border: 1px solid #000000;
-    border-radius: 360%;
+  --size: 30vh; /* 원의 크기 */
+  width: var(--size);
+  height: var(--size);
+  position: absolute;
 }
 
-.navbar {
-    position: absolute;
-    
-    list-style-type: none;
-    padding: 0px;
-    margin: 0px;
-    overflow: hidden;
-    width: 100%;
-    height: 80px;
-
-    top: 0px;
-    left: 0px;
-
-    border: 1px solid black;
+.circle {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: relative;
+  background-color: white;
 }
 
-.Portfolio_logo {
-    position: absolute;
-    width: 171px;
-    height: 39px;
+.square {
+  border: 2px solid #000; /* 원하는 스타일 및 두께로 설정하세요 */
 
-    background-position: 98px 26px;
-    left: 98px;
-    top: 26px;
-    color: black;
+  width: 20em; /* 사각형의 크기 */
+  height: 11em;
+  background-color: gray;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(calc(var(--i) * 45deg)) translate(20em);
 }
-
-.center_dot {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-
-    left: 1920px;
-    top: 520px;
-
-    background-color: black;
-
-    /*display: none;*/
-}
-
-.project {
-    box-sizing: border-box;
-
-    position: absolute;
-    width: 160px;
-    height: 266px;
-    left: 92.3vw;
-    top: 80px;
-
-    background-color: white;
-    border: 1px solid #000000;
-    transform-origin: 80px 440px;
-    transition: all 200ms ease-in;
-    transform: scale(1);
-
-    padding: 0 auto
-    
-}
-
-.project:hover {
-    z-index: 5;
-    transition: all 50ms ease-in;
-    background-color: rgb(0, 0, 0);
-    color:#fff;
-}
-
-.Portfolio_Home{
-
-    position: absolute;
-    float: left;
-    display: block;
-    color: black;
-    padding: 15px 15px;
-    text-align: center;
-    text-decoration: none;
-
-    font-size: 40px;
-    font-family: 'Pretendard';
-    font-style: normal;
-
-    left: 42px;
-    top: -5px;
-    color: black;
-}
-
-.Portfolio_Contact_Me {
-    position: absolute;
-    float: left;
-    display: block;
-    padding: 15px 15px;
-    text-align: center;
-    text-decoration: none;
-
-    left: 230px;
-    top: 0px;
-
-    font-size: 35px;
-    font-family: 'Pretendard';
-    font-style: normal;
-
-    color: black;
-}
-
-.login {
-    position: absolute;
-    float: left;
-    display: block;
-    padding: 15px 15px;
-    text-align: center;
-    text-decoration: none;
-
-    left: 1700px;
-    top: 0px;
-    
-    font-size: 35px;
-    font-family: "Pretendard";
-    font-style: normal;
-    
-    color: #000000;
-}
-
-.slider {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 500px;
-    height: 5px;
-    border-radius: 50%;
-    outline: none;
-}
-
-.slider::-moz-range-thumb {
-    border-radius: 50%;
-}
-
-.zoom-box {
-    width: 100px;
-    height: 100px;
-    margin: 32px auto;
-    transition: transform .2s; /* Animation */
-    background-color: aqua;
-  }
-  
-  .zoom-box:hover {
-    transform: scale(1.5);
-  }
