--- a/remake/Homepage.css
+++ b/remake/Homepage.css
@@ -1,39 +1,52 @@
-* {
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -o-user-select: none;
-  user-select: none;
-  outline: 0;
-  margin: 0;
-  padding: 0;
-}
-
-html, body {
+body,
+html {
   height: 100vh;
   width: 100vw;
-}
-
-.wheel {
-  width: 500px;
-  height: 500px;
-  background-color: #3498db;
-  border-radius: 50%;
-  position: relative;
-  overflow: hidden;
-}
-
-.box {
-  width: 80px;
-  height: 80px;
-  background-color: #e74c3c;
-  border: 2px solid #c0392b;
-  border-radius: 50%;
-  position: absolute;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
-  color: white;
+  background-color: rgba(137, 207, 240, 0.85);
+}
+.header {
+  background-color: rgba(87, 197, 249, 0.9);
+  padding: 0;
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 10vh;
+}
+
+.content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100% - 60px); /* header 높이를 뺀 나머지 높이 */
+}
+
+.circle-container {
+  --size: 25vh; /* 원의 크기 */
+  width: var(--size);
+  height: var(--size);
+  position: absolute;
+}
+
+.circle {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  position: relative;
+  background-color: white;
+}
+
+.square {
+  border: 1px solid #000;
+
+  width: 20em; /* 사각형의 크기 */
+  height: 12em;
+  background-color: gray;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(calc(var(--i) * 45deg)) translate(30em);
 }
